[gd_scene load_steps=8 format=2]

[ext_resource path="res://header_theme.tres" type="Theme" id=1]
[ext_resource path="res://images/Grass.png" type="Texture" id=2]
[ext_resource path="res://button_theme.tres" type="Theme" id=3]
[ext_resource path="res://src/Fail.gd" type="Script" id=4]
[ext_resource path="res://musics/total fail.ogg" type="AudioStream" id=5]
[ext_resource path="res://ARCADEPI.TTF" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 968, 576 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -340.0
margin_right = 233.0
margin_bottom = -277.0
theme = ExtResource( 1 )
text = "Game Over..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = 160.0
margin_right = 54.0
margin_bottom = 226.0
theme = ExtResource( 3 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_name" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.496296
anchor_right = 0.5
anchor_bottom = 0.496296
margin_left = -136.0
margin_top = -40.0
margin_right = 42.0
margin_bottom = 30.0
theme = ExtResource( 3 )
placeholder_text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="send_score" type="Button" parent="Player_name"]
margin_left = 201.0
margin_right = 271.0
margin_bottom = 66.0
theme = ExtResource( 3 )
disabled = true
text = "Send"

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -140.0
margin_right = 81.0
margin_bottom = -101.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="Player_name" to="." method="_on_Player_name_text_changed"]
[connection signal="pressed" from="Player_name/send_score" to="." method="_on_send_score_pressed"]
[connection signal="finished" from="Sound" to="." method="_on_Sound_finished"]
